--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -165,7 +165,7 @@ topics:
                 </p>
                 <figure>
                     <img src="{{ imgDir }}/salvador-dali_car-clothing-2.jpg" alt="" />
-                    <figcaption>Car Clothing, <cite>Salvador Dalí</cite></figcaption>
+                    <figcaption>Car Clothing, <cite>Salvador Dalí</cite> (1941)</figcaption>
                 </figure>
             </aside>
         </section>
