--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -240,40 +240,45 @@ topics:
                 <p class="consider__text">the markers of a decaying 'Net I mentioned before, with convivial tooling in mind:</p>
             </div>
             <div class="rendered">
+                <h3>Teaching & learning on the Web</h3>
+                <div class="cols">
                 {% asMarkdown %}
-                    ### Teaching & learning on the Web
+
                     Monolithic platforms like YouTube, TikTok, Medium, and Substack draw a ton of creators and educators because of the promise of monetization and large audiences, but they’ve shown time and time again how the lack of ownership creates a problem. When those platforms fail, when they change their rules, when they demand creators move or create a particular way to maintain their access to those audiences, they pit creators or their audiences against the loss of the other. Without adhering to the algorithm’s requirements, writers may not write an impactful document, and without bypassing a paywall, readers can't read it. 
 
-                    ¶
+                    ¶ {.lg-mk}
 
                     When those promises of exorbitant wealth and a life of decadence through per-click monetization ultimately dry up (or come with a steep moral or creative cost), creators and learners must look for new solutions for how educational content is shared on the Internet. The most self-evident, *convivial* answer is an old one: blogs. HTML is free to access by default, [RSS](https://indieweb.org/RSS) has worked for about 130 years<sup>[citation needed]</sup>, and combined with [webmentions](https://indieweb.org/Webmention), it’s never been easier to read new ideas, experiment with ideas, and build upon & grow those ideas with other strong thinkers on the web, *owning* that content all along.[^14]
                 {% endasMarkdown %}
+                </div>
             </div>
             <div class="rendered">
+                <h3>Connecting with friends on the Web</h3>
+                <div class="cols">
                 {% asMarkdown %}
-                    ### Connecting with friends on the Web
-
                     Social media apps have imprisoned us all in this weird content prison — in order to connect with friends we're sort of forced to create or be vanished by capricious black box algorithms, and all that we _do_ create is, as we’ve already alluded to, subsequently owned by whatever platform we've created it on. If Instagram goes away overnight, or decides to pivot catastrophically, your stories and your network of friends goes with it.
 
-                    ¶
+                    ¶ {.lg-mk}
 
                     The advent and development of tools & methodologies like [POSSE](https://indieweb.org/POSSE) (_Publish On your Own Site, Syndicate Elsewhere_), [ActivityPub](https://en.wikipedia.org/wiki/ActivityPub), [microformats](https://microformats.org/wiki/microformats2), and [ATProto](https://atproto.com/), it's becoming quite achievable to generate your own social network, interoperable with other networks like Bluesky or Mastodon. That network, designed for ownership and decentralization, is durable, designed around storytelling instead of engagement, and free of the whims of weird tech billionaires. 
 
                     With some basic HTML knowledge and getting-stuff-online knowledge, a handful of scrappy protocols, and a free afternoon or two, one can build their own home to post bangers for the tight homies, make friends, and snipe those new friends with those hits of dopamine they so fiendishly rely on.
                 {% endasMarkdown %}
+                </div>
             </div>
             <div class="rendered">
+                <h3>Coding for the web</h3>
+                <div class="cols">
                 {% asMarkdown %}
-                    ### Coding for the web
-
                     Lastly, consider the discipline of web engineering:
 
                     We have been asked to build the same B2B SaaS website with the same featureset n^∞ times, and our answers for the optimal way to do that are increasingly limited. We've penned all of our markup into JavaScript templates just in case a product manager needs the wrapper component to post JSON somewhere down the line, and we've whittled away at style code until it's just a mechanism for deploying one of two border-radius-drop-shadow combos to divs. It’s an industrial, production-minded way of approaching a discipline that has all the hallmarks of being a great craft, and that’s understandably uninspiring to many of us.
 
-                    ¶
+                    ¶ {.lg-mk}
 
                     Yet our young React shepherds have no need to fear: there are countless more colors than blurple out there, and countless more fonts than Inter. HTML and CSS are better and more generative technologies than they've ever been: Thanks to the tireless work of the CSS working groups and browser implementers, etc, there is an unbelievable amount of creative expression possible with basic web tools in a text editor. Even JavaScript is more progressively-ehanceable than ever, and enables interfacing with a rapidly-growing number of exciting browser APIs _(still [fuck Brendan Eich](https://www.thepinknews.com/2012/04/04/javascript-inventor-gave-1000-to-support-californias-gay-marriage-ban/) though)_. [`${new Date.getCurrentYear()}`](/writing/i-know-about-the-date-in-the-footer/) is a veritable renaissance of web code, and it asks of authors only curiosity and a drive to experiment. 
                 {% endasMarkdown %}
+                </div>
             </div>
         </section>
         <hr class="divider"/>
