--- a/src/scss/custom/_chapter-6.scss
+++ b/src/scss/custom/_chapter-6.scss
@@ -25,6 +25,11 @@
     font-size: 4rem;
     font-style: italic;
   }
+  img {
+    max-height: 62.5rem;
+    object-fit: cover;
+    object-position: top center;
+  }
   figcaption {
     margin-inline-end: 1rem;
   }
