--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -295,7 +295,9 @@ topics:
             </div>
             <div class="rendered">
                 {% asMarkdown %}
-                    Illich's thesis is that technology and its derived tools should serve people in a way that enhances their freedom, creativity, independence, and will, and the distillation of those principles on the web through manual code, hand-built social networks, and blogs, points luminously to one answer to the question of how the Internet can best serve humans: 
+                    Illich's thesis is that technology and its derived tools should serve people in a way that enhances their freedom, creativity, independence, and will.
+                    
+                    The distillation of those principles on the web through manual code, hand-built social networks, and blogs, points luminously to one answer to the question of how the Internet can best serve humans: 
                 {% endasMarkdown %}
             </div>
             <h3 class="websites-callout">it’s personal websites.</h3>
@@ -304,7 +306,7 @@ topics:
                     Hand-coded, syndicated, and above all *personal* websites are exemplary: They let users of the internet to be autonomous, experiment, have ownership, learn, share, find god, find love, find purpose. Bespoke, endlessly tweaked, eternally redesigned, built-in-public, surprising UI and delightful UX. The personal website is a staunch undying answer to everything the corporate and industrial web has taken from us.
                 {% endasMarkdown %}
             </div>
-            <div class="rendered">
+            <div class="rendered and-how">
                 {% asMarkdown %}
                     And how might one claim this ultimate toolchain of conviviality, and build a place on the web that enhances their autonomy and creativity?
 
