--- a/src/scss/custom/_base.scss
+++ b/src/scss/custom/_base.scss
@@ -107,6 +107,9 @@ section {
     font-size: 1.25rem;
     margin-block-end: 1em;
     grid-column: 1 / -1;
+    &:last-child {
+      margin-block-end: 0;
+    }
 
     @include screen(sm) {
       font-size: 1rem;
@@ -140,7 +143,8 @@ section {
 
 .divider {
   position: relative;
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: clip;
   border: none;
   border-top: 1px solid var(--color-border);
 
