--- a/src/scss/custom/_chapter-5.scss
+++ b/src/scss/custom/_chapter-5.scss
@@ -3,34 +3,54 @@
 @use './abstract' as *;
 
 .chapter-five {
+  @include magazine-grid;
+
   margin-block-start: var(--spacing-large);
   scroll-margin-block-start: var(--spacing-large);
+
+  > * {
+    grid-column: 1 / -1;
+  }
 }
 .chapter-five-hero {
   position: relative;
   margin-block-end: var(--spacing-large);
-  margin-inline: 1rem;
+  margin-inline: -1rem;
   text-align: center;
+
+  @include screen(sm) {
+    margin-inline: unset;
+  }
+  @include screen(lg) {
+    grid-column: 2 / -2;
+  }
   &__inner {
     position: absolute;
-    inset-block-start: var(--spacing-large);
     inset-inline: 0;
     color: #fefefe;
+    inset-block-start: 50%;
+    transform: translateY(calc(-50% - 1lh));
   }
   .chapter-counter {
-    margin-block-end: var(--spacing-large);
+    margin-block-end: 2rem;
   }
   &__title {
     @include davinci;
 
-    font-size: 4.5rem;
+    font-size: clamp(4.5rem, 12vw, 7.5rem);
+    padding-inline: 1rem;
+    @include screen(lg) {
+      // position: absolute;
+      // top: 50%;
+      // font-size: 7.5rem;
+    }
   }
   figure {
     position: relative;
     z-index: -1;
   }
   img {
-    height: 45rem;
+    height: 42rem;
     object-fit: cover;
     filter: brightness(0.8);
   }
@@ -47,17 +67,90 @@
   text-align: center;
 }
 
+.and-how {
+  margin-block-end: var(--spacing-large);
+
+  @include screen(sm) {
+    grid-column: 2/-2;
+  }
+  @include screen(lg) {
+    grid-column: 3 / -3;
+  }
+  @include screen(xl) {
+    grid-column: 5 / -5;
+  }
+
+  p {
+    @include screen(sm) {
+      font-size: 1.25rem;
+      grid-column: 1 / -1;
+      max-width: unset;
+    }
+    @include screen(lg) {
+      text-align: center;
+      text-wrap: balance;
+    }
+  }
+}
+
 .steps-list {
   margin: 0;
   margin-block-end: var(--spacing-large);
   padding: 0;
   counter-reset: steps;
+
+  @include screen(sm) {
+    display: grid;
+    column-gap: 1rem;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  @include screen(lg) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  @include screen(1300px) {
+    grid-template-columns: subgrid;
+  }
 }
 
 .steps-list-item {
   margin-block-end: var(--spacing-small);
-  padding-inline: 1rem;
+  list-style-type: none;
   counter-increment: steps;
+
+  @include screen(1300px) {
+    // grid-column-end: span 4;
+  }
+  @include screen(lg) {
+    text-align: justify;
+    // grid-column-end: span 5;
+
+    &:nth-of-type(1),
+    &:nth-of-type(4) {
+      // grid-column-start: 2;
+    }
+    &:nth-of-type(2),
+    &:nth-of-type(5) {
+      // grid-column-start: 7;
+    }
+    &:nth-of-type(3) {
+      // grid-column-start: 12;
+    }
+  }
+  @include screen(1300px) {
+    grid-column-end: span 4;
+    &:nth-of-type(1),
+    &:nth-of-type(4) {
+      grid-column-start: 2;
+    }
+    &:nth-of-type(2),
+    &:nth-of-type(5) {
+      grid-column-start: 7;
+    }
+    &:nth-of-type(3) {
+      grid-column-start: 12;
+    }
+  }
+
   &:last-child {
     margin-block-end: 0;
   }
@@ -85,11 +178,19 @@
     line-height: 1.2;
     margin-block-end: var(--spacing-small);
     text-align: center;
+
+    @include screen(sm) {
+      min-height: 2lh;
+    }
     em {
       font-style: normal;
     }
   }
   p {
     font-size: 1.25rem;
+
+    @include screen(sm) {
+      font-size: 1rem;
+    }
   }
 }
