📱 — Chapter 6 and works cited responsive

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -361,14 +361,19 @@ topics:
                 {% asMarkdown %}
                 You're not crazy. The internet *does* feel genuinely so awful right now, and for about a thousand and one reasons. But the path back to feeling like you have some control is to un-spin yourself from the Five Apps of the Apocalypse and reclaim the Internet as a set of tools you use to build something you can own & be proud of — or in most of our cases, be deeply ashamed of. _Godspeed and good luck_.
 
-                ¶
+                ❦
 
                 That's all for me. If you find any issues with this post, please reach out to me [by email](mailto:yo@henry.codes). Thanks eternally for your time and patience, and thanks for reading. Find me here online at one of my personal websites like [henry.codes](https://henry.codes) or [strange.website](https://strange.website) or [stillness.digital](https://stillness.digital) or [strangersbyspring.com](https://strangersbyspring.com), or sometimes [on Bluesky](https://bsky.app/profile/strange.website) and [Mastodon](https://front-end.social/@henry). 
 
                 As ever, unionize, free Palestine, trans rights are human rights, fix your heart or die.
+
+                *fin.* {.fin}
+                
+                [go home](/){.go-home}
                 {% endasMarkdown %}
             </div>
         </section>
+        <hr class="divider" />
         <footer class="works-cited">
             <h3 class="works-cited__title">Works Cited</h3>
             {% asMarkdown %}
