🧼 — Footnotes and captions adjustments

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -382,15 +382,15 @@ topics:
                 1. Kunstler, James Howard. _The Geography of Nowhere: The Rise and Decline of America’s Man-Made Landscape._ Simon & Schuster, 1995. { #footnote-3} 
                 1. Cervero, Robert. _The Transport Metropolis: A Global Enquiry._ Island ; Kogan Page, 1999. { #footnote-4}
                 1. Illich, Ivan. _Tools for Conviviality._ Harper & Row, 1973. { #footnote-5}
-                1. “The Struggles of Labor.” _United States History, U.S. Department of State,_ countrystudies.us/united-states/history-82.htm. Accessed 15 Dec. 2025. { #footnote-9}
-                1. “Global Fashion Industry Statistics.” _FashionUnited,_ fashionunited.com/statistics/global-fashion-industry-statistics. Accessed 15 Dec. 2025. { #footnote-10}
+                1. “The Struggles of Labor.” _United States History, U.S. Department of State,_ countrystudies.us/united-states/history-82.htm. { #footnote-9}
+                1. “Global Fashion Industry Statistics.” _FashionUnited,_ fashionunited.com/statistics/global-fashion-industry-statistics. { #footnote-10}
                 1. “The True Cost.” CMV Laservision, 2016. { #footnote-11}
                 1. “What Is Penicillin?” _Cleveland Clinic Health Library,_ 17 Oct. 2025, my.clevelandclinic.org/health/treatments/penicillin. { #footnote-6}
                 1. _Antimicrobial Resistance: Global Report on Surveillance._ World Health Organization, 2014. { #footnote-7}
                 1. Borlaff, A.S., Marcum, P.M. & Howell, S.B. Satellite megaconstellations will threaten space-based astronomy. _Nature_ **648**, 51–57 (2025). https://doi.org/10.1038/s41586-025-09759-5 { #footnote-8}
                 1. Berners-Lee, Tim. “Information Management: A Proposal.” _The Original Proposal of the WWW, HTMLized,_ Mar. 1989, www.w3.org/History/1989/proposal.html. { #footnote-12}
                 1. Schumacher, Ernst Friedrich. _Small Is Beautiful: Economics as If People Mattered._ Harper Perennial, 1973. { #footnote-13}
-                1. “Webmention.” _IndieWeb,_ indieweb.org/Webmention. Accessed 15 Dec. 2025. { #footnote-14}
+                1. “Webmention.” _IndieWeb,_ indieweb.org/Webmention. { #footnote-14}
                 {.works-cited-list}
             {% endasMarkdown %}
         </footer>
