--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -31,7 +31,7 @@ topics:
     <link rel="me" href="https://github.com/xdesro">
     <link rel="me" href="mailto:yo@henry.codes">
     <link rel="manifest" href="/meta/site.webmanifest" />
-    <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#000000" />
+    <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#2a2722" />
     <meta name="msapplication-TileColor" content="#2a2722" />
     <meta name="theme-color" content="#2a2722" />
     <meta name="generator" content="eleventy">
