🗺️  — Tidy up file system for custom CSS, many refinements

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -40,7 +40,7 @@ topics:
     <meta property="og:type" content="website">
 
     <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/custom/a-website-to-destroy-all-websites.css">
+    <link rel="stylesheet" href="/css/custom/a-website-to-destroy-all-websites/index.css">
 </head>
 
 <body>
@@ -77,7 +77,7 @@ topics:
                     <h2 class="chapter-one-hero__title"><span>The</span> <span>internet</span> <span>is bad.</span></h2>
                     <figure class="chapter-one-hero__frame">
                         <img src="{{ imgDir }}/bosch-follower_christs-descent-into-hell.jpg" alt="">
-                        <figcaption>christ’s descent into hell, <cite>follower of hieronymus bosch</cite> (~1625)</figcaption>
+                        <figcaption>Christ’s Descent Into Hell, <cite>Follower of Hieronymus Bosch</cite> (~1625)</figcaption>
                     </figure>
                 </div>
             </header>
@@ -139,7 +139,7 @@ topics:
                     <h2 class="chapter-two-hero__title"><span><span>The invention</span> <span>of the</span></span> <span>automobile</span></h2>
                     <figure class="chapter-two-hero__frame">
                         <img src="{{ imgDir }}/tamara-de-lempicka_autoportrait.jpeg" alt="">
-                        <figcaption>autoportrait, <cite>tamara de lempicka</cite> (~1625)</figcaption>
+                        <figcaption>Autoportrait, <cite>Tamara de Lempicka</cite> (1929)</figcaption>
                     </figure>
                 </div>
             </header>
@@ -182,29 +182,29 @@ topics:
 
                     Illich also describes the concept of _radical monopoly_, which is that point where a technological tool is so dominant that people are excluded from society unless they become its users. We saw this with the automobile, we saw it with the internet, and we even see it with social media.
 
-                    <del>No longer a tool to serve our societies, our societies now serve the automobile.</del> <ins>Instead of designing and using tools to build a society, our society now changes to adapt to the demands of our tools.</ins>
+                    <del>No longer a tool to serve our societies, our societies now serve the automobile.</del> <ins>Instead of designing and using tools to build a society, our society changes to adapt to the demands of our tools.</ins>
 
-                    ¶
+                    ¶ {.xl-mk}
 
                     Illich’s thesis allows us to reframe our adoption and use of the technologies in our life. We can map fairly directly most technological developments in the last 100 (or even 200) years to this framework: a net lift, followed by a push to extract value and subsequent insistence upon the technology's ubiquity:
                 {% endasMarkdown %}
             </div>
             <section class="tech-lockup">
                 <div>
-                    <h3>the textile revolution</h3>
                     {% asMarkdown %}
+                        ### the textile revolution
                         The preferred imagery used to mythologize the Industrial Revolution is the woodetchings of textile manufacturers, transformed in the early 19th century by the arrival of automated fabric machinery. Its proponents laud the shift of an agricultural society to a technological one, creating new sectors for labor, and raising up the middle class (we will say nothing of this period's *new* punishing conditions for labor in this essay[^6]). But the ultimate ecological and human costs engendered by the increasing availability of cheap fabric production are well-documented: In 2022, the fashion and textile industries employed around 60 million factory workers worldwide[^7], and less than 2% of those workers earn a living wage. Those workers also endure the full suite of labor exploitation practices, including gender-based harassment, wage theft, and unsafe conditions. On the material side, the induced consumption resulting from ever-cheaper products means the world consumed 400% more textile products globally as 20 years ago[^8], and bins most of it (the average American generates 82 pounds of textile waste each year).
                     {% endasMarkdown %}
                 </div>
                 <div>
-                    <h3>antibiotic technology</h3>
                     {% asMarkdown %}
+                        ### antibiotic technology
                         The arrival of antibiotics in 1928[^9] allowed for revolutionary leaps in fighting bacterial infections like strep throat, pneumonia, and meningitis, but an over-dependence and over-prescription of penicillin and its siblings through the 1950s-70s resulted in the proliferation of antibiotic resistance, which subsequently led to longer hospital stays, higher medical costs, and increased mortality.[^10]
                     {% endasMarkdown %}
                 </div>
                 <div>
-                    <h3>space exploration</h3>
                     {% asMarkdown %}
+                        ### space exploration
                         Since the beginning of the space exploration era in the late 1950s, humanity has made leaps and bounds in learning about our own world and its physical systems, telecommunications, imaging, etc. The increasing frequency of commercialization missions in space for satellite systems (and lately tourism) has resulted in immense amounts of space debris being generated — both from active satellites and from jettisoned/destroyed components of previous missions, the debris threatens future missions and has even been destructive to the field of astronomy, making it impossible to use earth-based sensors and photography devices to learn about space.[^11] So desperate to extract Shareholder Value from the starry sky, we're blinding our own ability to look at it.
                     {% endasMarkdown %}
                 </div>
@@ -241,7 +241,7 @@ topics:
             </div>
             <div class="rendered">
                 <h3>Teaching & learning on the Web</h3>
-                <div class="cols">
+                <div class="cols teaching">
                 {% asMarkdown %}
 
                     Monolithic platforms like YouTube, TikTok, Medium, and Substack draw a ton of creators and educators because of the promise of monetization and large audiences, but they’ve shown time and time again how the lack of ownership creates a problem. When those platforms fail, when they change their rules, when they demand creators move or create a particular way to maintain their access to those audiences, they pit creators or their audiences against the loss of the other. Without adhering to the algorithm’s requirements, writers may not write an impactful document, and without bypassing a paywall, readers can't read it. 
@@ -254,7 +254,7 @@ topics:
             </div>
             <div class="rendered">
                 <h3>Connecting with friends on the Web</h3>
-                <div class="cols">
+                <div class="cols connecting">
                 {% asMarkdown %}
                     Social media apps have imprisoned us all in this weird content prison — in order to connect with friends we're sort of forced to create or be vanished by capricious black box algorithms, and all that we _do_ create is, as we’ve already alluded to, subsequently owned by whatever platform we've created it on. If Instagram goes away overnight, or decides to pivot catastrophically, your stories and your network of friends goes with it.
 
@@ -268,7 +268,7 @@ topics:
             </div>
             <div class="rendered">
                 <h3>Coding for the web</h3>
-                <div class="cols">
+                <div class="cols coding">
                 {% asMarkdown %}
                     Lastly, consider the discipline of web engineering:
 
