--- a/src/scss/custom/a-website-to-destroy-all-websites/_base.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_base.scss
@@ -1,5 +1,5 @@
-@use '../abstract/variables' as g;
-@use '../abstract/mixins' as *;
+@use '../../abstract/variables' as g;
+@use '../../abstract/mixins' as *;
 
 @use './abstract' as *;
 
