--- a/src/scss/custom/a-website-to-destroy-all-websites/_abstract.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_abstract.scss
@@ -1,4 +1,4 @@
-@use '../abstract/mixins' as *;
+@use '../../abstract/mixins' as *;
 
 $image-dir: '/img/custom/a-website-to-destroy-all-websites';
 
