--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-4.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-4.scss
@@ -1,4 +1,4 @@
-@use '../abstract/mixins' as *;
+@use '../../abstract/mixins' as *;
 
 @use './abstract' as *;
 
@@ -31,11 +31,37 @@
     }
     @include screen(lg) {
       text-align: justify;
-
-      columns: 2;
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      column-gap: 1rem;
+      grid-auto-flow: dense;
     }
     @include screen(1300px) {
       grid-column: 5 / -5;
+    }
+    p {
+      @include screen(lg) {
+        grid-column: 1;
+        &:last-child {
+          grid-column: 2;
+        }
+      }
+    }
+    &.connecting {
+      p {
+        @include screen(lg) {
+          &:nth-last-child(2) {
+            grid-column: 2;
+          }
+        }
+      }
+    }
+    &.coding {
+      p:last-child {
+        @include screen(lg) {
+          grid-row-end: span 2;
+        }
+      }
     }
   }
 }
@@ -78,10 +104,6 @@
   font-size: 1.25rem;
   margin-block-end: var(--spacing-large);
   text-align: center;
-
-  @include screen(sm) {
-    font-size: 1rem;
-  }
   &__title {
     @include davinci;
 
