🔢 — Add word count to intro

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -57,6 +57,7 @@ topics:
                 <!-- https://www.artic.edu/artworks/79492/captive-pegasus -->
             </figure> 
             <a class="intro__label intro__label--author" href="/">A tiny website by Henry (from Online)</a>
+            <span class="intro__label intro__label--word-count">~3100 words; about a 15 minute read</a>
         </section>
         <section class="toc">
             <h2 class="toc__title">table of contents, of course</h2>
