🎞️  — Update gsap, set up animation for intro card

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -1,12 +1,12 @@
 ---
 permalink: writing/a-website-to-destroy-all-websites/index.html
-title: A Website To Destroy All Websites
 slug: a-website-to-destroy-all-websites
+title: A Website To Destroy All Websites
+pageDescription: How to win the war for the soul of the internet, and build the Web We Want.
 layout: 'layouts/blank.njk'
 publishDate: 2025-12-15T16:15:01.343Z
 featured: true
 og: "https://henry.codes/img/og/og-a-website-to-destroy-all-websites.png"
-pageDescription: How to win the war for the soul of the internet, and build the Web We Want.
 tags:
 - article
 category: journal
@@ -19,7 +19,7 @@ topics:
 {% set imgDir = '/img/custom/a-website-to-destroy-all-websites' %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
     <meta charset="UTF-8">
@@ -403,6 +403,8 @@ topics:
             {% endasMarkdown %}
         </footer>
     </main>
+    <script src="/js/a-website-to-destroy/index.js" type="module"></script>
+
 </body>
 
 </html>
