--- a/src/scss/custom/a-website-to-destroy-all-websites/_intro.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_intro.scss
@@ -89,6 +89,7 @@
 
     text-decoration: none;
     color: inherit;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 
     text-underline-offset: 1px;
 
