🎞️  — Animation for chapter 1 hero and pastoral aside

--- a/src/custom/a-website-to-destroy/index.njk
+++ b/src/custom/a-website-to-destroy/index.njk
@@ -103,7 +103,9 @@ topics:
             <div class="pastoral-aside">
                 <h3 class="pastoral-aside__title">it wasn’t <span>always</span> like this.</h3>
                 <figure>
+                    <div class="drift">
                     <img src="{{ imgDir }}/george-innes_pastoral-scene.jpg" alt="">
+                    </div>
                     <figcaption>Pastoral Scene, <cite>George Innes</cite> (1857)</figcaption>
                     <!-- https://artmuseum.princeton.edu/art/collections/objects/23254 -->
                 </figure>
