--- a/src/scss/custom/a-website-to-destroy-all-websites/_abstract.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_abstract.scss
@@ -15,6 +15,9 @@ $grid-xs: repeat(4, minmax(0, 1fr));
 $grid-sm: repeat(8, minmax(0, 1fr));
 $grid-lg: repeat(16, minmax(0, 1fr));
 
+$blank-clip: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+$blank-clip-davinci: polygon(0% -10%, 100% -10%, 100% 100%, 0% 100%);
+
 @mixin davinci {
   font-family: $font-display;
   font-weight: normal;
