--- a/src/scss/custom/a-website-to-destroy-all-websites/_chapter-1.scss
+++ b/src/scss/custom/a-website-to-destroy-all-websites/_chapter-1.scss
@@ -63,12 +63,10 @@
   --font: clamp(4.5rem, 17vw, 7.75rem);
   grid-column: 1 / -1;
   margin-block-end: var(--spacing-large);
-  padding-inline: 1rem;
 
   @include screen(sm) {
     --font: clamp(4.125rem, 10vw, 7.75rem);
     margin-block-end: 8rem;
-    padding-inline: unset;
     transform: translateX(2vw);
 
     --frame: min(41vw, 37.5rem);
@@ -123,6 +121,7 @@
 
     > span {
       display: block;
+      clip-path: $blank-clip-davinci;
       &:nth-of-type(1) {
         @include screen(sm) {
           text-align: right;
@@ -135,6 +134,7 @@
       }
       &:nth-of-type(3) {
         text-align: right;
+        margin-block-start: 0.5rem;
 
         @include screen(sm) {
           text-align: left;
